--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width,initial-scale=1" name="viewport"/>
@@ -60,10 +60,34 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Verschiedenes <span class="caret"></span></a>
                     <ul class="dropdown-menu">
+                        <li sec:authorize="hasRole('ROLE_ADMIN')">
+                          <a href="accounts.html" th:href="@{/accounts}">
+                            <span class="glyphicon glyphicon-dashboard"></span> Accounts
+                          </a>
+                        </li>
                         <li class="disabled"><a href="#"><span class="glyphicon glyphicon-leaf"></span> Über</a></li>
                         <li class="disabled"><a href="#"><span class="glyphicon glyphicon-globe"></span> Hilfe</a></li>
                         <li><a href="#"><span class="glyphicon glyphicon-flash"></span> Fehler melden</a></li>
                     </ul>
+                </li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    <span class="glyphicon glyphicon-user"></span> <span sec:authentication="principal.associatedPerson.firstName">Anon</span>
+                    <span class="caret"></span>
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a href="settings.html" th:href="@{/settings}">
+                        <span class="glyphicon glyphicon-cog"></span> Einstellungen
+                      </a>
+                    </li>
+                    <li>
+                      <form method="POST" class="logout" th:action="@{/logout}">
+                        <input type="hidden" name="csrf" th:value="csrf" />
+                        <button type="submit" class="btn btn-link"><span class="glyphicon glyphicon-log-out"></span> Ausloggen</button>
+                      </form>
+                    </li>
+                  </ul>
                 </li>
             </ul>
         </div>
@@ -646,6 +670,7 @@
     </section>
 
 </main>
+<input type="hidden" id="csrf" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 <script src="../static/resources/js/init.js" th:src="@{/resources/js/init.js}"></script>
 <script src="../static/resources/js/persons.js" th:src="@{/resources/js/persons.js}"></script>
 </body>
